# main.go
@@ -2,11 +2,10 @@ package main
 
 import (
 	"github.com/gin-gonic/gin"
-	ginSwagger "github.com/swaggo/gin-swagger"
-	"github.com/swaggo/gin-swagger/swaggerFiles"
-	"seckill-server/controller"
+
 	_ "seckill-server/docs"
 	"seckill-server/model"
+	"seckill-server/router"
 	"seckill-server/setting"
 )
 
@@ -26,21 +25,6 @@ func main() {
 	model.InitMysql()
 
 	gin.SetMode(gin.DebugMode)
-	r := gin.Default()
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-	goodsApi := r.Group("/goods")
-	{
-		goodsApi.GET("/:id", controller.GetGoods)
-		goodsApi.POST("/", controller.AddGoods)
-	}
-
-	userApi := r.Group("/user")
-	{
-		userApi.POST("/login", controller.Login)
-		//初始化用户
-		userApi.POST("/register", controller.Register)
-		//添加收货地址
-		userApi.POST("/address/")
-	}
+	r := router.InitRouter()
 	_ = r.Run(":7087") // listen and serve on 0.0.0.0:8080}
 }
