# model/order.go
@@ -1,5 +1,7 @@
 package model
 
+import "fmt"
+
 type Order struct {
 	PkId            int64  `json:"pk_id"`
 	FkGoodId        int64  `json:"fk_good_id"`
@@ -14,6 +16,16 @@ type Order struct {
 	CreateTime      string `json:"create_time"`
 }
 
-func (order *Order) Insert() error {
-
+func (o *Order) Insert() error {
+	sql := fmt.Sprintf(
+		"INSERT INTO `t_order`(`pk_id`, `fk_good_id`, `fk_user_id`, `goods_name`, `price`, `num`, `total_price`, `user_name`,`delivery_address`,`pay_time`) VALUES (?, ?, ?, ?, ?, ?, ?,?, ?, 0)")
+	stmt, err := mdb.Prepare(sql)
+	if err != nil {
+		return err
+	}
+	_, err = stmt.Exec(o.PkId, o.FkGoodId, o.FkUserId, o.GoodsName, o.Price, o.Num, o.TotalPrice, o.UserName, o.DeliveryAddress)
+	if err != nil {
+		return err
+	}
+	return nil
 }
